# Finding-Optional-Shared-Streets

./: .gitattributes  .gitignore  README.md  pyproject.toml
Algorithms/: Finding Optimal Shared Streets Tutorial with Algorithms.ipynb  Pre-Flow Push.py  Pre-Flow-Push-OSMnx.py  Test_OSMnx.py  config.yaml
data/: MASTER_TRAFFIC_COUNT.csv
data/Networks/: Denver_network.gml  Denver_network.gpkg  Denver_network.graphml  Park_Hill_network.graphml
data/busstops/: RTD_GIS_Current_Runboard.shp  RTD_GIS_Current_Runboard.shx
data/equity_index_2020___neighborhood.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByName.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.CatRelTypesByUUID.atx  a00000007.gdbtable  a00000009.spx  (+3 more)
notebooks/: BestNeighborhoodsStreets.ipynb  DenverMap.ipynb  Finding Optimal Shared Streets Tutorial.ipynb  PedestrianDemand.ipynb  StreetSelection.ipynb  TrafficFlowData.ipynb  preflowpush.py  util.py
paper/: export.bib  paper.tex
processed/: candidate_streets.dbf  candidate_streets.shp  candidate_streets.shx
(+186 files in other folders)
